2000-01-19  Shuhei KOBAYASHI  <shuhei@aqua.ocn.ne.jp>

	* poe.el (require): Handle `file-error' only.

2000-01-12  OKAZAKI Tetsurou  <okazaki@be.to>

	* EMU-ELS (emu-modules): Add `pccl' even if `mule' is not provided.

2000-01-05  Katsumi Yamaoka   <yamaoka@jpl.org>

	* Makefile, README.en, README.ja: Update for the new CVS server.

1999-12-24  Shuhei KOBAYASHI  <shuhei@aqua.ocn.ne.jp>

	* poe.el (functionp): Define it before loading "localhook".


1999-12-24  Yuuichi Teranishi  <teranisi@gohome.org>

	* APEL: Version 10.0 released.

1999-12-24  Keiichi Suzuki  <keiichi@nanap.org>

	* apel-ver.el: Fix file header.

1999-12-23  Yuuichi Teranishi  <teranisi@gohome.org>

	* timezone.el (timezone-abs): Eliminated.
	(timezone-zone-to-minute): Use `abs' instead of `timezone-abs'.

	* poe-18.el (current-time-zone): Use `abs'.

1999-12-23  Keiichi Suzuki  <keiichi@nanap.org>

	* product.el: Fix file header. `checkdoc' fix.

	* apel-ver.el: Fix file header.

1999-12-22  Shuhei KOBAYASHI  <shuhei@aqua.ocn.ne.jp>

	* APEL-ELS, EMU-ELS: product.el, apel-ver.el, time-stamp.el,
	and timezone.el are version-dependent.

	* product.el (emacs-major-version, emacs-minor-version): Moved
	from poe.el.

	* poe.el (emacs-major-version, emacs-minor-version): Removed.

	* pym.el: Add product information.

1999-12-22  Yuuichi Teranishi  <teranisi@gohome.org>

	* poe.el (string-to-int): Commented out an alias for
	`string-to-number'.

1999-12-13  Katsumi Yamaoka   <yamaoka@jpl.org>

	* poe-18.el: Fix open parenthesis.

	* README.ja: Sync up with README.en.

	* README.en: Fix what versions of Emacsen can use
	`normal-top-level-add-to-load-path'.

1999-12-12  Shuhei KOBAYASHI  <shuhei@aqua.ocn.ne.jp>

	* APEL-MK: Modified comments.

	* poe.el: Modified comments.

	* pym.el: Modified comments.
	(defalias-maybe): Don't update `current-load-list'.

1999-12-06  Shuhei KOBAYASHI  <shuhei@aqua.ocn.ne.jp>

	* pym.el (subr-fboundp): Reverted; but considered as obsolete.
