@@ -37,8 +37,8 @@
 
 (product-provide 'apel-ver
   ;; (product-define "APEL" nil '(9 23))	; comment.
-  (product-define "APEL" nil '(10 0))	; Released 24 December 1999
-  ;; (product-define "APEL" nil '(10 1))	;
+  ;; (product-define "APEL" nil '(10 0))	; Released 24 December 1999
+  (product-define "APEL" nil '(10 1))	; Released 20 January 2000
   ;; (product-define "APEL" nil '(10 2))	;
   )
 
